cpush and pull req

--- a/.github/workflows/porp.yaml
+++ b/.github/workflows/porp.yaml
@@ -1,6 +1,11 @@
 name: porp
 on: [push, pull_request]
 
+
+env:
+  push: c est un push
+  pr: un pull_request !
+
 jobs:
 
   push:
@@ -10,15 +15,15 @@ jobs:
       - uses: actions/checkout@v4
       - name: on va pusher
 
-        run: echo "C'est un push !"
+        run: echo "$push"
   
   pull:
     runs-on: ubuntu-latest
-    if: ${{github.env.pull == 'pull_request'}}
+    if: ${{github.event_name == 'pull_request'}}
     steps:
       - uses: actions/checkout@v4
       - name: on va puller
-        run: echo "c'est une pull-request !"
+        run: echo "$pr"
 
 
 
